// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatefulButton renders basic usage 1`] = `
<div>
  <button
    aria-disabled={false}
    aria-live="assertive"
    className="btn pgn__stateful-btn pgn__stateful-btn-state-default btn-primary mr-2"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <span
      className="d-flex align-items-center justify-content-center"
    >
      Saved
    </span>
  </button>
  <button
    aria-disabled={true}
    aria-live="assertive"
    className="btn pgn__stateful-btn pgn__stateful-btn-state-pending btn-primary mr-2 disabled"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <span
      className="d-flex align-items-center justify-content-center"
    >
      <span
        className="pgn__stateful-btn-icon"
      >
        <span
          aria-hidden={true}
          className="icon fa fa-spinner fa-spin"
          id="Icon1"
        />
      </span>
      Saving
    </span>
  </button>
  <button
    aria-disabled={true}
    aria-live="assertive"
    className="btn pgn__stateful-btn pgn__stateful-btn-state-complete btn-primary mr-2 disabled"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <span
      className="d-flex align-items-center justify-content-center"
    >
      <span
        className="pgn__stateful-btn-icon"
      >
        <span
          aria-hidden={true}
          className="icon fa fa-check-circle"
          id="Icon2"
        />
      </span>
      Saved
    </span>
  </button>
</div>
`;

exports[`StatefulButton renders custom icons and disable during state 1`] = `
Array [
  <button
    aria-disabled={false}
    aria-live="assertive"
    className="btn pgn__stateful-btn pgn__stateful-btn-state-default btn-primary mr-2"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <span
      className="d-flex align-items-center justify-content-center"
    >
      <span
        className="pgn__stateful-btn-icon"
      >
        <span
          aria-hidden={true}
          className="fa fa-download"
          id="Icon3"
        />
      </span>
      Download
    </span>
  </button>,
  <button
    aria-disabled={true}
    aria-live="assertive"
    className="btn pgn__stateful-btn pgn__stateful-btn-state-pending btn-primary mr-2 disabled"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <span
      className="d-flex align-items-center justify-content-center"
    >
      <span
        className="pgn__stateful-btn-icon"
      >
        <span
          aria-hidden={true}
          className="fa fa-spinner fa-spin"
          id="Icon4"
        />
      </span>
      Downloading
    </span>
  </button>,
  <button
    aria-disabled={false}
    aria-live="assertive"
    className="btn pgn__stateful-btn pgn__stateful-btn-state-complete btn-primary mr-2"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <span
      className="d-flex align-items-center justify-content-center"
    >
      <span
        className="pgn__stateful-btn-icon"
      >
        <span
          aria-hidden={true}
          className="fa fa-check"
          id="Icon5"
        />
      </span>
      Downloaded
    </span>
  </button>,
]
`;

exports[`StatefulButton renders custom states 1`] = `
Array [
  <button
    aria-disabled={true}
    aria-live="assertive"
    className="btn pgn__stateful-btn pgn__stateful-btn-state-unedited btn-primary mr-2 disabled"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <span
      className="d-flex align-items-center justify-content-center"
    >
      <span
        className="pgn__stateful-btn-icon"
      >
        <span
          aria-hidden={true}
          className="fa fa-save"
          id="Icon6"
        />
      </span>
      Save (no changes)
    </span>
  </button>,
  <button
    aria-disabled={false}
    aria-live="assertive"
    className="btn pgn__stateful-btn pgn__stateful-btn-state-edited btn-primary mr-2"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <span
      className="d-flex align-items-center justify-content-center"
    >
      <span
        className="pgn__stateful-btn-icon"
      >
        <span
          aria-hidden={true}
          className="fa fa-save"
          id="Icon7"
        />
      </span>
      Save Changes
    </span>
  </button>,
]
`;
